Jar management with flink application based deployment
